# gravelord

./: .gitignore  Makefile  README.md
backend/: .env.example  Dockerfile  README.md  pyproject.toml
backend/examples/: claude-code.WORKFLOW.md  codex.WORKFLOW.md  opencode-ollama.WORKFLOW.md
backend/src/gravelord/: board_cache.py  cli_ops.py  daemon_config.py  events.py  issue_settings.py  main.py  orchestrator.py  repos.py  runner.py  workflow.py  workspace.py
backend/src/gravelord/adapters/: base.py  claude_code.py  codex.py  opencode.py
backend/src/gravelord/api/: routes.py
backend/src/gravelord/tracker/: base.py  github.py
backend/tests/: test_adapter_args.py  test_agent_resolution.py  test_daemon_config.py  test_events.py  test_examples_parse.py  test_github_tracker.py  test_issue_settings.py  test_kanban.py  test_orchestrator.py  test_runner.py  test_workflow.py  test_workspace.py
frontend/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/: AllReposView.tsx  Board.tsx  CardSettingsPopover.tsx  DispatchModal.tsx  IssueCard.tsx  IssueDetail.tsx  Kanban.tsx  KanbanCard.tsx  KanbanColumn.tsx  Sidebar.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  dialog.tsx  input.tsx  popover.tsx  select.tsx
frontend/src/lib/: agents.ts  api.ts  ws.ts
webapp/: README.md
